fix: add correct z-index to the modal element Card: https://app.clickup.com/t/2t1zfmz

--- a/src/styles/globals/_modal.css
+++ b/src/styles/globals/_modal.css
@@ -10,4 +10,7 @@ toujou-modal {
     --toujou-modal-close-hover-color: var(--color-primary-dark);
 
     --toujou-modal-progressbar-color: var(--color-secondary);
+    --toujou-modal-z-index: var(--z-index-modal);
+
+    z-index: var(--toujou-modal-z-index);
 }
